# uop-sql-postgres

./: pyproject.toml
src/uop/sql/postgres/: adaptor.py  table.py
tests/: async_test_basics.py  conftest.py  test_basics.py
